# mdal-python

./: .gitignore  CHANGES.md  CHANGES.rst  CHANGES.txt  CMakeLists.txt  LICENSE  Makefile  README.rst  pyproject.toml  setup.py
.github/: environment.yml
.github/workflows/: build.yml
MDAL.egg-info/: PKG-INFO  SOURCES.txt
cmake/: FindMDAL.cmake
docs/doctrees/: environment.pickle  index.doctree
docs/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/html/_sources/: index.rst.txt
mdal/: CMakeLists.txt  Dataset.cpp  Dataset.hpp  DatasetGroup.cpp  DatasetGroup.hpp  PyMesh.cpp  PyMesh.hpp  __init__.py  conf.py  libmdalpython.pyx  transform.py
mdal-pypi/: build.sh  pyproject.toml
mdal_python.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
test/: drivers.py  leak.py  leak2.py  leak3.py  mio.vtk  save_test.ply  save_test_10.ply  save_test_12.ply  save_test_13.ply  save_test_2.ply  test.ply  test.py  test.vtk  test1.py  test2.py  test3.py  test_binary.ply  test_meshio.ply  test_save2.nc  test_save_11.ply  test_save_2.ply  test_save_3.ply  test_vol.ply  vector_test.ply  vol_test.py
test/data/: save_test.nc  test.ply  test_save.ply  test_save.slf  test_selafin.slf  test_selafin.slf.tmp
test/data/binary_dat/: inactiveFlagMesh.2dm
test/data/xmdf/hydro-as-2d/: hydro_as-2d.2dm
